Made link to bio on resume actually readable, fixed title showing up bug on contact page; still to do: revising the bio, make social media links work

--- a/css/resume.css
+++ b/css/resume.css
@@ -26,3 +26,7 @@ body {
     width: 600px;
     height: 800px;
 }
+
+#biolink {
+    text-shadow: 0px 0px 4px black;
+}
